==============================

Changes in version: SGP_0.0-4

  o Added LICENSE file including details on the Creative Commons Attribution-Noncommercial-Share Alike 3.0 United State License.
  o Added Goodness-of-fit argument/option/capability to studentGrowthPercentiles function.
  o Incorporated vignette.
  o Cleaned up documentation.
  o Increased percentile growth trajectory/projection to four years from three.
  o Fixed minor bugs in studentGrowthProjections (Thanks to Bob Lee for finding these).


Changes in version: SGP_0.0-3

  o Included option/argument in studentGrowthPercentiles function to avoid quantile crossing based upon Dette & Volgushev (2008)
  o Cleaned up minor errors in documentation.
  o Added optional argument, convert.using.loss.hoss, to studentGrowthPercentiles to convert percentile cuts extended below/above the lowest obtainable scale score/highest obtainable 
    scale score (loss/hoss) to the loss/hoss (defaults to TRUE).

Changes in version: SGP_0.0-2

  o Updated Contributors.
  o Changed rounding of percentile cuts used for growth percentile calculation to 5 decimal places.
  o Changed rounding of automatically produced B-spline knots to 2 decimal places.
  o Extended range of automatically produced B-spline boundaries.
  o Added optional argument, percuts.digits, to studentGrowthPercentiles to allow specification of rounding digits for growth percentile cuts (defaults to 2).
  o Added optional argument, percentile.trajectories, to studentGrowthProjections allowing the function to return 1, 2, and 3 year student percentile trajectories based upon supplied percentile values 
    (defaults to 10th, 35th, 50th, 65th, and 90th). 
  o Added optional argument, projcuts.digits, to studentGrowthProjections to allow specification of rounding digits for percentile trajectory cuts (defaults to 2).

Changes in version: SGP_0.0-1

  o Package Released.