@@ -1,5 +1,10 @@
 ==============================
 
+Changes in version: SGP_0.0-5
+
+  o Moved CITATION file to inst directory
+  o Fixed minor bugs in studentGrowthPercentiles function.
+
 Changes in version: SGP_0.0-4
 
   o Added LICENSE file including details on the Creative Commons Attribution-Noncommercial-Share Alike 3.0 United State License.
